--- a/.dockerignore
+++ b/.dockerignore
@@ -4,32 +4,21 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# TypeScript source files (we only need compiled JS in production)
-src/
-*.ts
-!*.d.ts
-
-# Development files
+# Environment files
 .env
 .env.local
 .env.development
 .env.test
-
-# Build tools and configs (not needed in final image)
-webpack.config.js
-tsconfig.json
-.eslintrc*
-.prettierrc*
 
 # Git
 .git/
 .gitignore
 .gitattributes
 
-# Documentation
-*.md
-docs/
-LICENSE
+# Documentation (keep for now)
+# *.md
+# docs/
+# LICENSE
 
 # IDE
 .vscode/
@@ -53,18 +42,11 @@ temp/
 *.tmp
 *.log
 
-# Build artifacts not needed
-*.map
-dist/**/*.map
-
 # CI/CD
 .github/
 .gitlab-ci.yml
 .travis.yml
 jenkins/
 
-# Other
+# Docker files themselves
 .dockerignore
-Dockerfile*
-docker-compose*.yml
-Makefile
